Forms voor nieuwe posts en editen toegevoegd.

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -3,11 +3,13 @@
 {% block content %}
 {% for post in posts %}
   <div class="post">
-  <h2><a href="{% url 'post_detail' pk=post.pk%}">{{ post.title }}</a></h2>
-    <div class="date">
-      <p>Gepubliceerd op: {{ post.published_date }}</p>
-    </div>
-      <p>{{ post.text|linebreaksbr }}</p>
-    </div>
+    {% if post.published_date %}
+      <h2><a href="{% url 'post_detail' pk=post.pk%}">{{ post.title }}</a></h2>
+      <div class="date">
+        <p>Gepubliceerd op: {{ post.published_date }}</p>
+      </div>
+        <p>{{ post.text|linebreaksbr }}</p>
+      </div>
+    {% endif %}
 {% endfor %}
 {% endblock %}
